Added support for building and testing java modules